# gNode

./: .gitignore  COMMAND_SCHEMA.md  CONTRACT.md  CONTRACT.scn.md  CREDENTIAL_RESOLUTION.md  LICENSE  README.md  composer.json  geodeploy.yaml  nginx-deny.conf
client/php/src/: GSDClient.php  GSDFallback.php
client/php/src/Exception/: ConnectionException.php  GSDException.php
client/php/src/Storage/: RedisStorage.php  StorageInterface.php
client/php/src/Utils/: StreamUtils.php
client/php/tests/: GSDClientTest.php
config/: daemon.env  gcore.env  geodineum-grants-sweep.service  geodineum-grants-sweep.timer  geodineum-keyspace-sample.service  geodineum-keyspace-sample.timer  setup.yaml.example  site.env.example
config/schemas/: broadcast_event.yaml  health_metrics.yaml  unified_command.yaml
daemon/: Cargo.toml  build.rs  nginx-deny.conf
daemon/config/: config_schema.yaml  constellation_schema.yaml  dtap_schema.yaml  evolution_schema.yaml  galaxy_schema.yaml  gnode-daemon.service  health_stream.yaml.example  lua-libraries.yaml  service_schema.yaml  shared_values.yaml  stream-config.yaml  tool_schema.yaml  valkey-gnode.conf
daemon/examples/format_definitions/: compact_minimal.json  json_v1_basic.json  json_v2_enhanced.json
daemon/functions/: README.md  gnode_analytics.lua  gnode_batch.lua  gnode_batch_resp3.lua  gnode_broadcast.lua  gnode_cache.lua  gnode_config.lua  gnode_core.lua  gnode_direct.lua  gnode_gcore_config.lua  gnode_geometric.lua  gnode_group.lua  gnode_hash.lua  gnode_lock.lua  gnode_monitoring.lua  gnode_node.lua  gnode_protocol.lua  gnode_pubsub.lua  gnode_resilience.lua  gnode_site.lua  gnode_stream.lua  gnode_topo.lua  gnode_topology.lua  gnode_transaction.lua  gnode_utils.lua
daemon/src/: asset_builder.rs  compute_handler.rs  config.rs  custom_topology.rs  daemon.rs  ecosystem_config.rs  ext_author.rs  ext_verify.rs  geometric_precision.rs  lib.rs  main.rs  node_config.rs  routing_config.rs  tool_registration.rs  unified_config.rs  utils.rs  valkey_function_manager.rs  worker.rs
daemon/src/extensions/: mod.rs
daemon/src/integration/: command_handler.rs  command_processor.rs  connection_manager.rs  consumer_groups.rs  content_compressor.rs  content_minifier.rs  diagnostics.rs  error_handlings.rs  fast_lane.rs  load_metrics.rs  mod.rs  path_resolution.rs  ratelimit.rs  receipt.rs  service_discovery.rs  shared_manager.rs  stream_discovery.rs  stream_processor.rs  template_renderer.rs  thread_safety.rs  valkey_functions.rs
daemon/src/integration/direct/: mod.rs  provisioner.rs
daemon/src/integration/handlers/: config.rs  diagnostic.rs  direct_channel.rs  geometric.rs  introspection.rs  mod.rs  relay_ops.rs  service.rs  stream.rs  system.rs  topology_custom.rs  topology_unified.rs  types.rs
daemon/src/integration/processor/: README.md  broadcast_reader.rs  circuit_breakers.rs  format_processor.rs  health_processor.rs  mod.rs  pending_processor.rs  recovery_processor.rs  resp3_protocol.rs  state_manager.rs  stream_reader.rs  stream_utils.rs  unified_stream_processor.rs
daemon/src/integration/relay/: mod.rs  policy.rs  router.rs  telemetry.rs  translator.rs
daemon/src/relational_topology/: constraint.rs  dependency.rs  edge.rs  mod.rs  point.rs  tests.rs  topology.rs  voxel.rs
daemon/src/template/: README.md  mod.rs  template_engine.rs  template_manager.rs
daemon/src/template/format/: format_parser.rs  format_registry.rs  format_schema.rs  format_serializer.rs  format_transformer.rs  mod.rs
daemon/src/template/json/: README.md  command_schema.json  response_schema.json
daemon/src/template/resp3/: README.md  field_mapping.json  redis_mapping.json
daemon/templates/: cube_face_base.html.tera
docs/: nginx-deny.conf  writing-extensions.md
docs/architecture/: DETERMINISM_GUARANTEE.md  INTER_SERVICE_ROUTING.md  TOPOLOGY_TIERS.md
docs/examples/: basic_usage.php
docs/operations/: CONFIGURATION.md  INSTALLATION_CHECKLIST.md  NODE_QUICKSTART.md  ONBOARDING.md  PERMISSIONS.md  SERVICE_MANAGEMENT.md  SYSTEMD_SERVICES.md
docs/reference/: FCALL_COOKBOOK.md
docs/valkey/: ACL_PASSWORD_MANAGEMENT.md  VALKEY_ACL_NUANCES.md  VALKEY_CONFIGURATION.md
scripts/: build.sh  check-command-schema.php  check-daemon-health.php  check-gnode-status.sh  constellation-setup.sh  deregister-service.sh  flush-valkey.sh  geodineum-gen-ext-keys.sh  geodineum-sign-extensions.sh  init-gnode.sh  install-gnode-service.sh  install-gnode.sh  keyspace-footprint.sh  load-valkey-functions.sh  logrotate-geodineum.conf  mint-node-identity.sh  nginx-deny.conf  node-exposure.sh  onboard-service.sh  register-site.sh  reload-gnode.sh  repair-site-acl.sh  setup-gnode-stack.sh  setup-gnode.sh  setup-valkey-replica.sh  setup-valkey-smart.sh  start-daemon.sh  start-gnode.sh  stop-daemon.sh  uninstall-gnode-service.sh  validate-geodineum-config.sh  validate-relay-routing.sh  valkey-cli-secure.sh  write-acl-daemon-tier-rule.sh
scripts/cli/: daemon-contract.sh  daemon-rebuild.sh  daemon-reload-lua.sh  deregister.sh  grants.sh  register.sh  topology.sh
scripts/setup/lib/: common.sh  detect.sh  verify.sh
scripts/setup/modules/: 10-apache-optimize.sh  20-network-hardening.sh
tools/diagnostics/: gnode-diagnostics.sh  gsd-diagnostics.sh
