[package]
name = "gsd-daemon"
version = "0.1.0"
edition = "2021"
authors = ["nCore Team"]
description = "Geometric Service Daemon for capability-based service discovery"

[dependencies]
redis = "0.22.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.9"
clap = { version = "3.0", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
dotenv = "0.15"
bincode = "1.3"

[lib]
name = "gsd"
path = "src/lib.rs"

[[bin]]
name = "gsd-daemon"
path = "src/main.rs"
